# mancala-best-move

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: MancalaBin.hpp  MancalaBoard.hpp  MancalaMoveResult.hpp  MancalaTree.hpp
src/: MancalaBin.cpp  MancalaBoard.cpp  MancalaTree.cpp  main.cpp
